# openFrameworks-renamed

./: CMakeLists.txt  Makefile  README  README.rst  README.textile  index.html  openFrameworks.cmake  openFrameworks.pc.in
app/: ofAppGlutWindow.h
events/: ofEventUtils.h
graphics/: ofImage.h
sound/: ofSoundPlayer.h  ofSoundStream.cpp
utils/: ofConstants.h  ofUtils.cpp
video/: ofGstUtils.cpp  ofGstUtils.h  ofUCUtils.cpp  ofUCUtils.h  ofVideoGrabber.h  ofVideoPlayer.cpp  ofVideoPlayer.h
